// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-static-file-ancestors should get ancestors for a nested file or folder 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "",
        "parent": null,
        "path": "/",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "App_Plugins",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/",
        },
        "path": "/App_Plugins",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "UmbracoEmbeddedResource",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/App_Plugins",
        },
        "path": "/App_Plugins/UmbracoEmbeddedResource",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "BackOffice",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/App_Plugins/UmbracoEmbeddedResource",
        },
        "path": "/App_Plugins/UmbracoEmbeddedResource/BackOffice",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "Default",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/App_Plugins/UmbracoEmbeddedResource/BackOffice",
        },
        "path": "/App_Plugins/UmbracoEmbeddedResource/BackOffice/Default",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "css",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/App_Plugins/UmbracoEmbeddedResource/BackOffice/Default",
        },
        "path": "/App_Plugins/UmbracoEmbeddedResource/BackOffice/Default/css",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "application.css",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/App_Plugins/UmbracoEmbeddedResource/BackOffice/Default/css",
        },
        "path": "/App_Plugins/UmbracoEmbeddedResource/BackOffice/Default/css/application.css",
      },
    ],
  },
}
`;

exports[`get-static-file-ancestors should handle root-level item path gracefully 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "",
        "parent": null,
        "path": "/",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "App_Plugins",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/",
        },
        "path": "/App_Plugins",
      },
    ],
  },
}
`;
